@@ -4,6 +4,9 @@ Changelog
 0.7
 ---
 
+- Make sure to add the `start` index to our time tracker tool / catalog.
+  [hannosch]
+
 - Removed old test runner scripts.
   [hannosch]
 
